--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 body {
     background-color: #D4DBE2;
 }
@@ -29,4 +30,11 @@ footer {
 }
 .pfp {
     max-width: 100%;
+}
+.introtext {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    text-align: justify;
+    color: #1D0F0F;
+
 }
