--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 body {
-    background-color: #D4DBE2;
+    background-image: url(../images/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    /* background-color: #D4DBE2; */
 }
 footer {
     background-color: #D4DBE2;
 }
-.toprow {
+.toprow, .footer {
     border: 3px;
     border-color: #7B7C81;
     border-style: solid;
@@ -22,19 +26,72 @@ footer {
     text-align: right;
 }
 #navlink:hover {
-    color: #D4DBE2;
+    color: #7B586B;
     text-decoration: underline;
 }
 .logo {
     max-height: 150px;
 }
-.pfp {
+
+.pfp, .background {
     max-width: 100%;
 }
 .introtext {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     text-align: justify;
     color: #1D0F0F;
+    background-color: rgba(123,124,129, 0.5);
 
+}
+h1, h2, h4, .hobby-text{
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+.hobby-text{
+    font-weight: bolder;
+    text-align: justify;
+}
+
+
+.slider {
+	width: 75%;
+	margin: 2em auto;
+	
+}
+
+.slider-wrapper {
+	width: 100%;
+	height: 400px;
+	position: relative;
+}
+
+.slide {
+	float: left;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transition: opacity 5s linear;
+}
+
+.slider-wrapper > .slide:first-child {
+	opacity: 1;
+}
+
+.social {
+    max-width: 100%;
+}
+.contactemail {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    align-content: center;
+}
+.mail{
+    text-decoration: none;
+    color: #1D0F0F;
+}
+.mail:hover{
+    color: #7B586B;
+    text-decoration: underline;
 }
